mobile fixes. bg jump, padding, centering nav, font sizes

--- a/client/app.less
+++ b/client/app.less
@@ -11,20 +11,31 @@ a {
     font-weight: bold;
 }
 
+nav.menu .ui.container .menu {
+    @media only screen and (max-width : @largestMobileScreen) {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
 main {
     margin-top: @nav-height;
 
     section {
-        min-height: @segment-min-height;
         display: flex;
         justify-content:center;
         align-items:center;
+        min-height: @segment-min-height;
+
+        @media only screen and (max-width : @largestMobileScreen) {
+            min-height: @segment-min-height-mobile;
+        }
 
         &#home-section {
             //.aspect-ratio(16, 9);
 
             .bg {
-                top: @nav-height;
+                top: 0;
                 left: 0;
                 bottom: 0;
                 width: 100%;
@@ -42,12 +53,15 @@ main {
                 //.aspect-ratio(16, 9);
             }
 
+            .ui.container {
+                @media only screen and (max-width : @largestMobileScreen) {
+                    margin-left: 0.5em !important;
+                    margin-right: 0.5em !important;
+                }
+            }
+
             h1 {
                 font-size: 3.5rem;
-
-                @media only screen and (min-width: @mobileBreakpoint) {
-                    font-size: 4rem;
-                }
             }
         }
 
