--- a/client/vars.less
+++ b/client/vars.less
@@ -1,10 +1,11 @@
 ////////// variables /////////
 
-@gold               : #95856a;
-@tan                : #DED7C3;
+@gold                       : #95856a;
+@tan                        : #DED7C3;
 
-@nav-height         : 45px;
-@segment-min-height : 70vh;
+@nav-height                 : 45px;
+@segment-min-height         : 70vh;
+@segment-min-height-mobile  : 50vh;
 
-@home-bg-url        : "/images/coffee-2800-1600.jpg";
-@about-bg-url       : "/images/textures/darkdenim3.png";
+@home-bg-url                : "/images/coffee-2800-1600-4.jpg";
+@about-bg-url               : "/images/textures/darkdenim3.png";
